# founder-arsenal

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EVOLUTION.md  Makefile  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_dispatch_founder_query.py  02_crisis_assessment.py  03_founder_dashboard.py
reference/: capital-instruments.md  india-govt-schemes-master.md  investor-psychology.md
skills/founder-resilience/: SKILL.md
skills/fundraising-command-center/reference/: india-foundations-directory.md  india-fundraising-stack.md  india-sector-grants.md  valuation-benchmarks.md
skills/gtm-revenue-engine/: SKILL.md
skills/talent-os/: SKILL.md
src/: __init__.py  crisis.py  dispatcher.py  fundraising.py  governance.py  gtm.py  models.py  ops.py  parallel.py  resilience.py  talent.py  utils.py
tests/: conftest.py  test_crisis.py  test_dispatcher.py  test_fundraising.py  test_governance.py  test_gtm.py  test_ops.py  test_parallel.py  test_property_based.py  test_resilience.py  test_talent.py  test_utils.py
