[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "founder-arsenal"
version = "0.1.0"
description = "Unified founder operating system — 8 integrated skills for autonomous founders"
authors = [{ name = "TechKnowmad AI", email = "admin@techknowmad.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["founder", "startup", "fundraising", "crisis", "gtm", "esop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["B008", "N806"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
